MH-4192 prevent overflow in header of Recordings view (AdminUI)
git-svn-id: https://opencast.jira.com/svn/MH/trunk@7913 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -480,3 +480,7 @@ a.oc_tabs-active {
 .fl-tabs-left {
     padding-left:130px !important;
 }
+
+#oc_recordingmenu {
+     overflow: hidden !important;
+}
